[gd_scene load_steps=8 format=3 uid="uid://boxd06bs072ot"]

[ext_resource type="Texture2D" uid="uid://calh6m8dogwnh" path="res://assets/sprites/claw ghost.png" id="1_4a83h"]
[ext_resource type="Script" uid="uid://7qy3ofv5fhrg" path="res://scenes/enemy/enemy.gd" id="1_tjssy"]
[ext_resource type="Texture2D" uid="uid://bw44pf0124a71" path="res://assets/sprites/arrow.png" id="2_a3pup"]
[ext_resource type="PackedScene" uid="uid://bag2nuyexyfdr" path="res://scenes/ui/stats_ui.tscn" id="3_40wdo"]
[ext_resource type="PackedScene" uid="uid://bax57irk61b16" path="res://scenes/ui/intent_ui.tscn" id="5_gl05p"]
[ext_resource type="PackedScene" uid="uid://bby8cdua61fei" path="res://scenes/mood/mood_handler.tscn" id="6_cwlon"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agsc7"]
size = Vector2(62, 64)

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_tjssy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4a83h")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(37, 0)
rotation = -1.5707964
texture = ExtResource("2_a3pup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_agsc7")

[node name="StatsUI" parent="." instance=ExtResource("3_40wdo")]
offset_top = 30.0
offset_bottom = 47.0

[node name="IntentUI" parent="." instance=ExtResource("5_gl05p")]
offset_top = -64.0
offset_bottom = -32.0

[node name="MoodHandler" parent="." node_paths=PackedStringArray("mood_owner") instance=ExtResource("6_cwlon")]
offset_left = -39.0
offset_top = 48.0
offset_right = -39.0
offset_bottom = 48.0
mood_owner = NodePath("..")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
